[package]
name = "coffee-backend"
version = "0.1.0"
authors = ["fatcat2 <ryanjchen2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33.3"
postgres = "0.19.0"
http = "0.2.2"
dirs = "3.0.1"